Adds composer install and docker4drupal files

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@
 
 # Ignore .env files as they are personal
 /.env
+/.editorconfig
+/.gitattributes
+
+# Ignore misc OS files
+.DS_Store
+
+# Config
+/config/sync/
